--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,8 +6,10 @@ services:
     image: mariadb
     environment:
       - MYSQL_ROOT_PASSWORD=moodle
-      - MYSQL_ROOT_USER=root
+#      - MYSQL_ROOT_USER=root
       - MYSQL_DATABASE=moodle
+      - MYSQL_USER=User
+      - MYSQL_PASSWORD=p4ssw0rd      
     volumes:
       - ./moodle_db:/var/lib/mysql
 
@@ -18,11 +20,11 @@ services:
       - "8443:8443"
     environment:
       - MOODLE_DATABASE_HOST=mariadb
-      - MOODLE_DATABASE_USER=root
-      - MOODLE_DATABASE_PASSWORD=moodle
+      - MOODLE_DATABASE_USER=User
+      - MOODLE_DATABASE_PASSWORD=p4ssword
       - MOODLE_DATABASE_NAME=moodle
-      - MOODLE_USERNAME=User
-      - MOODLE_PASSWORD=p4ssw0rd
+#      - MOODLE_USERNAME=User
+#      - MOODLE_PASSWORD=p4ssw0rd
     volumes:
       - ./moodle_data:/bitnami/moodle
       - ./moodledata_data:/bitnami/moodledata  
