--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,13 +3,12 @@ version: '3.3'
 services:
 
   mariadb:
-    image: mariadb
+    image: bitnami/mariadb:latest
     environment:
-      - MYSQL_ROOT_PASSWORD=moodle
-#      - MYSQL_ROOT_USER=root
-      - MYSQL_DATABASE=moodle
-      - MYSQL_USER=User
-      - MYSQL_PASSWORD=p4ssw0rd      
+      - ALLOW_EMPTY_PASSWORD=yes 
+      - MARIADB_USER=bn_moodle 
+      - MARIADB_PASSWORD=bitnami
+      - MARIADB_DATABASE=bitnami_moodle
     volumes:
       - ./moodle_db:/var/lib/mysql
 
@@ -19,23 +18,14 @@ services:
       - "8200:8080"
       - "8443:8443"
     environment:
-      - MOODLE_DATABASE_HOST=mariadb
-      - MOODLE_DATABASE_USER=User
-      - MOODLE_DATABASE_PASSWORD=p4ssword
-      - MOODLE_DATABASE_NAME=moodle
-#      - MOODLE_USERNAME=User
-#      - MOODLE_PASSWORD=p4ssw0rd
+      - ALLOW_EMPTY_PASSWORD=yes
+      - MOODLE_DATABASE_USER=bn_moodle 
+      - MOODLE_DATABASE_PASSWORD=bitnami
+      - MOODLE_DATABASE_NAME=bitnami_moodle
     volumes:
       - ./moodle_data:/bitnami/moodle
       - ./moodledata_data:/bitnami/moodledata  
     depends_on:
-      - mariadb          
-    links:
-      - mariadb:mariadb
-
-
-
-
-  
+      - mariadb      
      
       
